--- a/frontend/src/components/MoodSelection/MoodSelection.module.css
+++ b/frontend/src/components/MoodSelection/MoodSelection.module.css
@@ -106,6 +106,31 @@
   transform: translateY(0);
 }
 
+.button.analyzing {
+  position: relative;
+  cursor: not-allowed;
+  opacity: 0.8;
+  background: linear-gradient(
+    -45deg,
+    var(--light-color),
+    #fff,
+    var(--light-color)
+  );
+  background-size: 200% 200%;
+  animation: gradient 2s ease infinite;
+  color: var(--black);
+}
+
+.button:disabled {
+  cursor: not-allowed;
+  opacity: 0.7;
+}
+
+.input:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
+}
+
 /* animation */
 @keyframes motion {
   0%,
@@ -116,6 +141,17 @@
   50% {
     opacity: 0.7;
     transform: translateY(-50%) scale(1.1);
+  }
+}
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
 
